--- a/ampeg/test-output/index.html
+++ b/ampeg/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -105,11 +105,6 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="ampeg.LoginAndLogoutTest" class="method navigator-link" hash-for-method="canLoginAndLogout">canLoginAndLogout</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="ampeg.LoginAndLogoutTest" class="method navigator-link" hash-for-method="cannotLoginWithoutPassword">cannotLoginWithoutPassword</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -137,19 +132,12 @@
                   <span class="method-name">canLoginAndLogout</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="cannotLoginWithoutPassword">
-                  </a> <!-- cannotLoginWithoutPassword -->
-                  <span class="method-name">cannotLoginWithoutPassword</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/35/m6kpbw8s133dq4d8n2js6l080000gn/T/testng-eclipse--243179691/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/35/m6kpbw8s133dq4d8n2js6l080000gn/T/testng-eclipse--1510186667/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -158,7 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;ampeg.LoginAndLogoutTest&quot;/&gt;
+      &lt;class name=&quot;ampeg.LoginAndLogoutTest&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;canLoginAndLogout&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- ampeg.LoginAndLogoutTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -198,20 +190,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'canLoginAndLogout')
 data.setCell(0, 2, 'ampeg.LoginAndLogoutTest')
-data.setCell(0, 3, 9219);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'cannotLoginWithoutPassword')
-data.setCell(1, 2, 'ampeg.LoginAndLogoutTest')
-data.setCell(1, 3, 4744);
+data.setCell(0, 3, 6513);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -226,9 +214,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">ampeg.LoginAndLogoutTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">cannotLoginWithoutPassword</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -241,10 +236,6 @@ return data;
               <div class="test-method">
                 <span class="method-name">canLoginAndLogout</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">cannotLoginWithoutPassword</span>
-                <span class="method-start">9222 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
