--- a/ampeg/test-output/old/Default suite/methods.html
+++ b/ampeg/test-output/old/Default suite/methods.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96e4cd">  <td>21/10/13 19:28:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginAndLogoutTest.cannotLoginWithoutPassword()[pri:0, instance:ampeg.LoginAndLogoutTest@318ba8c8]">cannotLoginWithoutPassword</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="96e4cd">  <td>21/10/13 19:28:31</td>   <td>-9223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginAndLogoutTest.canLoginAndLogout()[pri:0, instance:ampeg.LoginAndLogoutTest@318ba8c8]">canLoginAndLogout</td> 
-  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="a2d7b5">  <td>21/10/13 21:47:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginAndLogoutTest.canLoginAndLogout()[pri:0, instance:ampeg.LoginAndLogoutTest@143640d5]">canLoginAndLogout</td> 
+  <td>main@200224114</td>   <td></td> </tr>
 </table>
