--- a/ampeg/test-output/emailable-report.html
+++ b/ampeg/test-output/emailable-report.html
@@ -8,12 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">LogInAndOutTestNG</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,121</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,679</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">LogInAndOutTestNG &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">ampeg.LoginAndLogoutTest</td><td><a href="#m0">canLoginAndLogout</a></td><td rowspan="1">1634177872399</td><td rowspan="1">7167</td></tr><tr class="passedeven"><td><a href="#m1">cannotLoginWithoutPassword</a></td><td rowspan="1">1634177879570</td><td rowspan="1">3912</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">ampeg.EdgeTests</td><td><a href="#m0">canLoginTest</a></td><td rowspan="1">1634179894507</td><td rowspan="1">11640</td></tr></tbody>
 </table>
-<h2>LogInAndOutTestNG</h2><h3 id="m0">ampeg.LoginAndLogoutTest#canLoginAndLogout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">ampeg.LoginAndLogoutTest#cannotLoginWithoutPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">ampeg.EdgeTests#canLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
