--- a/ampeg/test-output/index.html
+++ b/ampeg/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="ampeg.EdgeTests" class="method navigator-link" hash-for-method="canLoginTest">canLoginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="ampeg.SafariTest" class="method navigator-link" hash-for-method="canLoginTest">canLoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,7 +122,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">ampeg.EdgeTests</span>
+              <span class="class-name">ampeg.SafariTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/35/m6kpbw8s133dq4d8n2js6l080000gn/T/testng-eclipse--1820948884/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/35/m6kpbw8s133dq4d8n2js6l080000gn/T/testng-eclipse-827486740/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,11 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;ampeg.EdgeTests&quot;&gt;
+      &lt;class name=&quot;ampeg.SafariTest&quot;&gt;
         &lt;methods&gt;
           &lt;include name=&quot;canLoginTest&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- ampeg.EdgeTests --&gt;
+      &lt;/class&gt; &lt;!-- ampeg.SafariTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -193,13 +193,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'canLoginTest')
-data.setCell(0, 2, 'ampeg.EdgeTests')
-data.setCell(0, 3, 11640);
+data.setCell(0, 2, 'ampeg.SafariTest')
+data.setCell(0, 3, 6621);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -225,7 +225,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">ampeg.EdgeTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">ampeg.SafariTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">canLoginTest</span>
                 <span class="method-start">0 ms</span>
