--- a/ampeg/test-output/old/Default suite/methods.html
+++ b/ampeg/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a2d7b5">  <td>21/10/13 22:51:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EdgeTests.canLoginTest()[pri:0, instance:ampeg.EdgeTests@21507a04]">canLoginTest</td> 
+<tr bgcolor="a2d7b5">  <td>21/10/14 20:50:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SafariTest.canLoginTest()[pri:0, instance:ampeg.SafariTest@21507a04]">canLoginTest</td> 
   <td>main@2095303566</td>   <td></td> </tr>
 </table>
